cilium-policies/4-deny-namespace/deny-specific-namespace-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "deny-specific-namespace"
spec:
  description: "Allow all traffic except from other-namespace"
  endpointSelector:
    matchLabels:
      run: web
  ingress:
  - fromEndpoints:
    - matchExpressions:
      - key: io.kubernetes.pod.namespace
        operator: NotIn
        values:
        - other-namespace
